--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: What I've been working on
+title: What I have been working on
 
 # Your name to show in the footer
 author: Luke Whitesides
