--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: What I have been working on
+title: Where I share updates about my non-work work.
 
 # Your name to show in the footer
 author: Luke Whitesides
